include crud functions with Entity Core and MySQL Database

--- a/dotnet-core-api-rest/appsettings.json
+++ b/dotnet-core-api-rest/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "MySqlConnetion" :  {
+    "MySqlConnectionString": "Server=localhost;Database=rest_api;Uid=root;Pwd=*280849#"
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
