--- a/dotnet-core-api-rest/Properties/launchSettings.json
+++ b/dotnet-core-api-rest/Properties/launchSettings.json
@@ -20,7 +20,7 @@
     "dotnet_core_api_rest": {
       "commandName": "Project",
       "launchBrowser": true,
-      "launchUrl": "api/persons",
+      "launchUrl": "api/v1/persons",
       "applicationUrl": "https://localhost:5001;http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
