--- a/dotnet-core-api-rest/dotnet-core-api-rest.csproj
+++ b/dotnet-core-api-rest/dotnet-core-api-rest.csproj
@@ -28,6 +28,7 @@
     <PackageReference Include="MySql.Data" Version="8.0.12" />
     <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="2.1.2" />
     <PackageReference Include="Microsoft.AspNetCore.App" Version="2.1.4" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Formatters.Xml" Version="2.1.2" />
   </ItemGroup>
 
   <ItemGroup>
