JWT Token Security implementation

--- a/dotnet-core-api-rest/appsettings.json
+++ b/dotnet-core-api-rest/appsettings.json
@@ -2,7 +2,11 @@
   "MySqlConnetion" :  {
     "MySqlConnectionString": "Server=localhost;Database=rest_api;Uid=root;Pwd=*280849#"
   },
-
+  "TokenConfigurations": {
+    "Audience": "ExempleAudience",
+    "Issuer": "ExempleIssuer",
+    "Seconds": 1200
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
