--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "MySqlConnetion" :  {
-    "MySqlConnectionString": "Server=localhost;Database=rest_api;Uid=root;Pwd=*280849#"
+    "MySqlConnectionString": "Server=db;Port=3306;Database=rest_api;Uid=docker;Pwd=docker;SslMode=none;"
   },
   "TokenConfigurations": {
     "Audience": "ExempleAudience",
