--- a/dotnet-core-api-rest.csproj
+++ b/dotnet-core-api-rest.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
+    <DockerComposeProjectPath>docker-compose.dcproj</DockerComposeProjectPath>
   </PropertyGroup>
 
   <ItemGroup>
@@ -292,6 +293,9 @@
     </Reference>
   </ItemGroup>
 
+  <ItemGroup>
+    <None Remove="docker-compose.override.yml" />
+  </ItemGroup>
    <Target Name="ChangeAliasesOfStrongNameAssemblies" BeforeTargets="FindReferenceAssembliesForReferences;ResolveReferences">
     <ItemGroup>
       <ReferencePath Condition="'%(FileName)' == 'MySqlConnector'">
